Existed Location functionality added

--- a/M4/M4Module-master/app/src/main/AndroidManifest.xml
+++ b/M4/M4Module-master/app/src/main/AndroidManifest.xml
@@ -147,7 +147,8 @@
         <activity
             android:name="com.example.olivia.myapplication.model.RetrieveGraphData"
             android:label="@string/title_activity_retrieve_graph_data"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ExistedLocationActivity"></activity>
     </application>
 
 </manifest>
